--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,10 +133,10 @@ workflows:
     jobs:
       - prep-alpha:
           context: MATHTONE_DEV
-          filters:
-            branches:
-              only:
-                - /prerelease\/.*/
+          #filters:
+          #  branches:
+          #    only:
+          #      - /prerelease\/.*/
       - run-alpha-unit-tests:
            requires:
              - prep-alpha
