--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,10 +140,10 @@ workflows:
       - run-alpha-unit-tests:
            requires:
              - prep-alpha
-      - publish-alphas-artifactory:
-           context: MATHTONE_DEV
-           requires:
-             - run-alpha-unit-tests
+      # - publish-alphas-artifactory:
+      #      context: MATHTONE_DEV
+      #      requires:
+      #        - run-alpha-unit-tests
       - prep-release:
           context: MATHTONE_DEV
           filters:
