--- a/src/tests/Sandbox.Tests/Sandbox.Tests.csproj
+++ b/src/tests/Sandbox.Tests/Sandbox.Tests.csproj
@@ -37,4 +37,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\SDK\Mathtone.Sdk.Data.Sql\Mathtone.Sdk.Data.Sql.csproj" />
+  </ItemGroup>
+
 </Project>
