--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,8 @@ workflows:
           context: MATHTONE_DEV
       - run-unit-tests:
          context: MATHTONE_DEV
-
+         requires:
+            - prep-project
           #filters:
           #  branches:
           #    only:
