--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,10 @@ jobs:
       - image: postgres
         environment:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: test!1234
+          POSTGRES_PASSWORD: ${TEST_SQL_PWD}
       - image: mcr.microsoft.com/mssql/server:2022-latest
         environment:
-          MSSQL_SA_PASSWORD: test!1234
+          MSSQL_SA_PASSWORD: ${TEST_SQL_PWD}
           ACCEPT_EULA: Y
     steps:
       - attach_workspace:
@@ -38,10 +38,10 @@ jobs:
       - run:
          name: run unit tests
          command:  dotnet test src/mathtone-magic.sln
-      # - run: dotnet nuget add source ~/project/packages --name Local
-      # - run: dotnet restore src/chex.sln
-      # - run: dotnet build src/chex.sln --configuration Release
-      # - run: dotnet test src/chex.sln
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
 workflows:
   
   build:
