--- a/src/tests/Sandbox.Tests/Sandbox.Tests.csproj
+++ b/src/tests/Sandbox.Tests/Sandbox.Tests.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="Npgsql" Version="6.0.6" />
     <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.20" />
