--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - image: postgres
         environment:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ${TEST_SQL_PWD}
+          POSTGRES_PASSWORD: test1234
       - image: mcr.microsoft.com/mssql/server:2022-latest
         environment:
           MSSQL_SA_PASSWORD: test!1234
