--- a/src/SDK/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
+++ b/src/SDK/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Npgsql" Version="6.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Mathtone.Sdk.Data\Mathtone.Sdk.Data.csproj" />
+  </ItemGroup>
+
 </Project>
