--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,10 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run: dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget.org
       - run: dotnet nuget add source ~/project/packages --name Local
       - run: dotnet nuget list source
+      
       - pack-pre:
           project: src/SDK/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
           suffix: alpha
