--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget
-      - run: dotnet nuget add source ~/project/packages --name Local
+      # - run: dotnet nuget add source ~/project/packages --name Local
       - run: dotnet nuget list source
       
       - pack-pre:
