--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
           at: .
       - run: dotnet nuget add source ~/project/packages --name Local
       - run: dotnet nuget list source
-      - run: dotnet restore src/src/mathtone-magic.sln
+      - run: dotnet restore src/mathtone-magic.sln
       - run:
          name: run unit tests
          command:  dotnet test src/mathtone-magic.sln
