--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,17 @@ jobs:
           name: "Add Artifactory"
           command: dotnet nuget add source https://mathtone.jfrog.io/artifactory/api/nuget/v3/mathtone-dev --name Mathtone-Dev --username ${ARTIFACTORY_USER} --password ${ARTIFACTORY_PWD} --store-password-in-clear-text
       - run: dotnet nuget push packages/*.nupkg --source Mathtone-Dev
+  publish-alphas-nuget:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
+    steps:
+      - attach_workspace:
+          at: .
+          
+      - run:
+          name: "Add Artifactory"
+          command: dotnet nuget add source https://api.nuget.org/v3/index.json
+      - run: dotnet nuget push packages/*.nupkg --source Mathtone-Dev
 workflows:
   
   build:
