--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
           project: src/SDK/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
           suffix: alpha
       - pack-pre:
-          project: src/SDK/Mathtone.Sdk.Data.Npgql/Mathtone.Sdk.Data.Npgql.csproj
+          project: src/SDK/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
           suffix: alpha
 
       - persist_to_workspace:
