--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,15 @@ commands:
           name: Build and Pack << parameters.project >>
           command: |
             dotnet build << parameters.project >> --configuration Release
-            dotnet pack << parameters.project >> --configuration Release --no-build --output packages --version-suffix << parameters.suffix >> 
+            dotnet pack << parameters.project >> --configuration Release --no-build --output packages --version-suffix << parameters.suffix >>
+  
+  # publish-release-nuget:
+  #   docker:
+  #     - image: mcr.microsoft.com/dotnet/sdk:6.0
+  #   steps:
+  #     - attach_workspace:
+  #         at: .
+  #     - run: dotnet nuget push packages/*.nupkg --api-key ${NUGET_PUBLISH_KEY} --source https://api.nuget.org/v3/index.json
 jobs: 
   prep-project:
     docker:
@@ -68,6 +76,14 @@ jobs:
           proj: src/SDK/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
           ref: ../Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
           pkg: Mathtone.Sdk.Data
+      - run: dotnet nuget list source
+      - run: dotnet restore src/mathtone-magic.sln
+      - pack-pre:
+          project: src/SDK/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
+          suffix: alpha
+      - pack-pre:
+          project: src/SDK/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
+          suffix: alpha
       - persist_to_workspace:
           root: .
           paths:
@@ -86,6 +102,9 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run: dotnet nuget add source ~/project/packages --name Local
+      - run: dotnet nuget list source
+      - run: dotnet restore src/mathtone-magic.sln
       - run:
          name: run unit tests
          command:  dotnet test src/mathtone-magic.sln
@@ -93,6 +112,28 @@ jobs:
           root: .
           paths:
             - .
+  publish-alphas-artifactory:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
+    steps:
+      - attach_workspace:
+          at: .
+          
+      - run:
+          name: "Add Artifactory"
+          command: dotnet nuget add source https://mathtone.jfrog.io/artifactory/api/nuget/v3/mathtone-dev --name Mathtone-Dev --username ${ARTIFACTORY_USER} --password ${ARTIFACTORY_PWD} --store-password-in-clear-text
+      - run: dotnet nuget push packages/*.nupkg --source Mathtone-Dev
+  publish-alphas-nuget:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
+    steps:
+      - attach_workspace:
+          at: .
+          
+      - run:
+          name: "Add Artifactory"
+          command: dotnet nuget add source https://api.nuget.org/v3/index.json
+      - run: dotnet nuget push packages/*.nupkg --source Mathtone-Dev
 workflows:
   
   build:
@@ -107,6 +148,10 @@ workflows:
          context: MATHTONE_DEV
          requires:
            - split-packages
+      - publish-alphas-artifactory:
+          context: MATHTONE_DEV
+          requires:
+            - run-unit-tests
           #filters:
           #  branches:
           #    only:
