--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,9 @@ jobs:
   split-packages:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
+    parameters:
+      suffix:
+        type: string
     steps:
       - attach_workspace:
           at: .
@@ -73,8 +76,7 @@ jobs:
       - run: dotnet restore src/mathtone-magic.sln
       - pack-pre:
           project: src/SDK/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
-          suffix: alpha
-      # - run: dotnet list package
+          suffix: << parameters.suffix >>
       - swapref:
           proj: src/SDK/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
           ref: ../Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
@@ -87,10 +89,10 @@ jobs:
       - run: dotnet restore src/mathtone-magic.sln
       - pack-pre:
           project: src/SDK/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
-          suffix: alpha
+          suffix: << parameters.suffix >>
       - pack-pre:
           project: src/SDK/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-          suffix: alpha
+          suffix: << parameters.suffix >>
 
       - persist_to_workspace:
           root: .
@@ -153,6 +155,7 @@ workflows:
           context: MATHTONE_DEV
       - split-packages:
           context: MATHTONE_DEV
+          suffix: alpha
           requires:
            - prep-project
       - run-unit-tests:
@@ -164,6 +167,14 @@ workflows:
           suffix: -alpha
           requires:
             - run-unit-tests
+
+        
+      # - deploy-beta-artifactory:
+      #     type: approval
+      #     requires:
+      #       - build
+      #       - request-approval
+      
           #filters:
           #  branches:
           #    only:
